<resources>
    <string name="google_maps_key">AIzaSyAn7lPJHsehIBr-EV76F4-cv5FlOMxaOKI</string>
    <string name="app_name">eAdvokate</string>
    <string name="authpassword" translatable="false">IwwK5$7T$q67Zny$46@5Sji08kjIxoHn9%QjINvEJ&amp;ji4h^EL</string>
    <string name="signintext">Preferred Consultation Language</string>
    <string name="applanguage">Preferred App Language</string>
    <string name="letsstarttext">Let\'s Get Started</string>
    <string name="termpolicy" translatable="false">By signing up you accept to the Terms and Conditions,Privacy Policy.</string>
    <string name="signmsg">Don\'t have an account?</string>
    <string name="regismsg">Already have an account?</string>
    <string name="optscreentext">Verification</string>
    <string name="otpmsg">Enter your OTP code number</string>
    <string name="otpbuttonmsg">Continue</string>
    <string name="codemsg">Didn\'t receive the code?</string>
    <string name="resendmsg">Resend OTP</string>
    <string name="term" translatable="false">Agree with <a href="">Terms Conditions</a> &amp; </string>
    <string name="privacy_policy" translatable="false"> <a href="">Privacy Policy</a> </string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="profile">Feeds</string>
    <string name="help">Account</string>
    <string name="search">Search</string>
    <string name="homemsg">Lodge any complaint/FIR instantly with the assistance of an experienced advocate</string>
    <string name="videomsg">Instant Video\nConsultancy</string>
    <string name="audiomsg">Instant Audio\nConsultancy</string>
    <string name="schedulmsg">Schedule An Appointment</string>
    <string name="instantservice">Instant Solution &amp; Customized Services</string>
    <string name="instantservicenew">Instant Services</string>
    <string name="viewall">View all</string>
    <string name="legalmsg">24x7 Legal Assistance</string>
    <string name="legaladvocate">24x7 Legal Advocate</string>
    <string name="revdocmsg">Review Documents</string>
    <string name="cheqmsg">Cheque Bounce/NI</string>
    <string name="issumsg">Issue a Notice!</string>
    <string name="rentmsg">Rent Agreements</string>
    <string name="marriagemsg">Marriage Registration</string>
    <string name="marriagemsga">Register your Marriage</string>
    <string name="matrimsg">Matrimonial Disputes</string>
    <string name="legalassmsg">Legal Assistance for Startups</string>
    <string name="startup">Start up Lawyers</string>
    <string name="assismsg">Assistance with Affidavit</string>
    <string name="settlemsg">Settle Your Challan</string>
    <string name="animlmsg">Animal Cruelty</string>
    <string name="conmsg">Consumer Assistance</string>
    <string name="cybermsg">Cyber Crime</string>
    <string name="sendnotice">Send a Notice</string>
    <string name="affidavit">Make an Affidavit</string>
    <string name="challan">Release of Challans</string>
    <string name="whatsissue">What\’s the issue</string>
    <string name="civilmsg">Civil/Commercial </string>
    <string name="propertymsg">Property\n/Real Estate</string>
    <string name="corpormsg">Corporate</string>
    <string name="criminalmsg">Criminal</string>
    <string name="divorcemsg">Divorce</string>
    <string name="taxmsg">Taxation</string>
    <string name="chequbouncmsg">Banking\n/Cheque Bouncing</string>
    <string name="envmsg">Environment</string>
    <string name="animmsg">Animal Cruelty</string>
    <string name="dommsg">Domestic voilence</string>
    <string name="sexmsg">Sexual Harasment</string>
    <string name="motormsg">Motor Accident</string>
    <string name="myprofile">My Profile</string>
    <string name="termcondition">Terms and Conditions</string>
    <string name="policymsg">Privacy Policy</string>
    <string name="cases">My Cases</string>
    <string name="request">Pending Requests</string>
    <string name="appoint">My Appointments</string>
    <string name="advocate">My Advocates</string>
    <string name="payment">Payment</string>
    <string name="consultation">My Consultations</string>
    <string name="lawyer">My Lawyers</string>
    <string name="rateus">Rate Us</string>
    <string name="setting">Settings</string>
    <string name="shareapp">Share with your friends</string>
    <string name="downloadmsg">Download app for</string>
    <string name="layer">Lawyers</string>
    <string name="student">Students</string>
    <string name="supor">Help Centre</string>
    <string name="other">Others</string>
    <string name="chat">Chat</string>
    <string name="review">Review</string>
    <string name="aboutmsg">About Us</string>
    <string name="query">Queries</string>
    <string name="contus">Contact Us</string>
    <string name="about">About Eadvocate</string>
    <string name="more">More</string>
    <string name="child">Child Custody</string>
    <string name="arbitration">Arbitration</string>
    <string name="labor">Labor Laws</string>
    <string name="breach">Breach Of Contract</string>
    <string name="consumer">Consumer Court</string>
    <string name="custom">Custom &amp; Central Excise</string>
    <string name="immigration">Immigration</string>
    <string name="insurance">Insurance</string>
    <string name="itr">ITR/GST</string>
    <string name="medical">Medical Negligence</string>
    <string name="trade">Trademark/Patent/Copyright</string>
    <string name="willstrust">Wills/Trust</string>
    <string name="muslimlaws">Muslim Law</string>
    <string name="humanrights">Human Rights</string>
    <string name="media">Media &amp; Entertainment</string>
    <string name="mergers">Mergers &amp; Acquisition</string>
    <string name="dataprivacy">Data Privacy</string>
    <string name="marriagecouns">Marriage Counseling </string>
    <string name="employmatter">Employment Matters</string>
    <string name="techlaws">Technology Law</string>
    <string name="enargylaw">Energy Law</string>
    <string name="citizenship">Citizenship Matters</string>
    <string name="outsidemsg">Outside Court Settlement</string>
    <string name="commercialmsg">Commercial Agreement</string>
    <string name="salesmsg">Sale/purchase Deed</string>
    <string name="patent">Patent Issue</string>
    <string name="copy">Copyright Issue</string>
    <string name="registration">Registration of Wills/Trust</string>
    <string name="success">Succession</string>
    <string name="human">Human Rights</string>
    <string name="merger">Mergers &amp; Acquisition</string>
    <string name="data">Data Privacy</string>
    <string name="arms">Arms &amp; Ammunition</string>
    <string name="matrimonial">Matrimonial Dispute</string>
    <string name="energy">Energy Law </string>
    <string name="citizen">Citizenship Matters</string>
    <string name="mediation">Mediation</string>
    <string name="commercial">Commercial Agreement</string>
    <string name="sale">Sale/purchase Deed</string>
    <string name="meeting">Personal\nMeeting</string>
    <string name="online">Online Consultancy</string>
    <string name="teleonline">Telephonic Consultancy</string>
    <string name="pickcase">Pick Your Case</string>
    <string name="property">Property</string>
    <string name="civil">Civil</string>
    <string name="criminal">Criminal</string>
    <string name="divorce">Divorse</string>
    <string name="logout">Log out</string>
    <string name="environment">Enviroment</string>
    <string name="txt">Tax</string>
    <string name="clockpagemsg">Please wait! we are finding the \nbest advocates for you!</string>
    <string name="alertmsg">Meanwhile: \nDon\’t press the refresh/back button and make sure you have a stable connection.</string>
    <string name="youradvocate">Your Advocate</string>
    <string name="advocatetitle">Our Advocate is here to guide you in your Legal matters</string>
    <string name="profileview">View Profile</string>
    <string name="contibutton">Continue Now</string>
    <string name="supportmsg">Need Free Assistance?</string>
    <string name="feedmsg">Feeback</string>
    <string name="videoquality">Video/Audio Quality</string>
    <string name="audioquality">Are you satisfied with the consultancy?</string>
    <string name="suggestion">Any Suggestions?</string>
    <string name="hintmsg">Write here...</string>
    <string name="proceed">Go to homepage</string>
    <string name="profilelawyer">Advocate Profile</string>
    <string name="documentreview">Document Review</string>
    <string name="noofpages">Total number of pages</string>
    <string name="docuploadmsg">Upload Your Documents here</string>
    <string name="dochintmsg">Select Files</string>
    <string name="basic">Basic</string>
    <string name="gpstitle">GPS Required!</string>
    <string name="gpsmsg">Enable gps otherwise location won\'t work</string>
    <string name="settinggps">SETTINGS</string>
    <string name="docproceed">Proceed</string>
    <string name="chooselawyercat">Choose Your Lawyer</string>
    <string name="expfirst">Experience - 0-3 Years</string>
    <string name="expfirstcharge">Charges - Rs. 80/page</string>
    <string name="helpcenter"> Help Center</string>
    <string name="paymentissue"> Payment related issue</string>
    <string name="paymentrefund"> Payment and refunds </string>
    <string name="advocaterelatedissue">Advocates related issue</string>
    <string name="others">Others</string>
    <string name="writeissue">Write your issue here...</string>
    <string name="submit">Submit</string>
    <string name="privacy">SUMMARY OF KEY POINTS
    This summary provides key points from our privacy policy.

    What personal information do we process? When you visit, use, or navigate our Services, we may process personal information depending on how you interact , the choices you make, and the products and features you use.

    Do we process any sensitive personal information? We do not process sensitive
    personal information.

    Do we receive any information from third parties? We may receive information from public databases, marketing partners, social media platforms, and other outside sources.

    How do we process your information? We process your information to provide,
    improve, and administer our Services, communicate with you for security and fraud prevention, and comply with the law. We may also process your information for other purposes with your consent. We process your information only when we have a valid legal reason.

    In what situations and with which parties do we share personal information?
    We may share information in specific situations and with specific third parties.

    How do we keep your information safe? We have organizational and technical
    processes and procedures to protect your personal information. However, no electronic transmission over the internet or information storage technology can be guaranteed to be 100% secure, so we cannot promise or guarantee that hackers,
    cybercriminals, or other unauthorized third parties will not be able to defeat our
    security and improperly collect, access, steal.</string>
</resources>