<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/homepagebackdesign"
        android:elevation="10dp"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/backarrow"
            android:layout_marginBottom="3dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:elevation="20dp"
            app:cardCornerRadius="100dp"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/backarrow"
                app:tint="@color/red" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center_horizontal"
            android:text="@string/helpcenter"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17dp" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/helpcenterlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/submit"
        android:paddingBottom="10dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="5dp"
        android:elevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paymentissue"
               android:textAlignment="center"
                android:padding="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/greydark"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        android:elevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paymentrefund"
                android:textAlignment="center"
                android:padding="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/greydark"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        android:elevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advocaterelatedissue"
                android:textAlignment="center"
                android:padding="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/greydark"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/suggenstionback"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:layout_marginBottom="3dp">
       <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:elevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:textAlignment="center"
                android:padding="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/greydark"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <EditText
            android:id="@+id/otherissuehere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/writeissue"
            android:padding="10dp"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="13dp"/>

    </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/signbutton"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/privacylayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/privacytxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="13dp"

                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</RelativeLayout>