<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/basiclayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/expeadvocateback"
        android:elevation="1dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/package_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:fontFamily="@font/poppinsmedium"
                    android:padding="10dp"
                    android:text="@string/basic"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <View
                    android:id="@+id/basicview"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/greydark"
                    android:layout_marginTop="-10dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/expfirst"
                android:textAlignment="center"
                android:textColor="@color/greydark"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/expfirstcharge"
                android:textAlignment="center"
                android:textColor="@color/greydark"
                android:textSize="14dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>