<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.YourAdvocateActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/homepagebackdesign"
        android:elevation="10dp"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/backarrow"
           android:layout_marginBottom="3dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:elevation="20dp"
            app:cardCornerRadius="100dp"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/backarrow"
                app:tint="@color/red" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center_horizontal"
            android:text="@string/documentreview"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17dp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/uploaddoclayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/proceedbutton"
        android:layout_below="@id/header"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsmedium"
            android:padding="10dp"
            android:text="@string/docuploadmsg"
            android:textColor="@color/black"
            android:textSize="14dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="(Support only pdf file)"
            android:layout_marginLeft="12dp"
            android:textSize="10dp"
            android:layout_marginTop="-10dp"/>

        <LinearLayout
            android:id="@+id/selectfilelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selectlanguageborder"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:scaleType="centerInside"
                android:src="@drawable/add" />

            <TextView
                android:id="@+id/uploadfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/dochintmsg"
                android:textAlignment="center"
                android:textColor="@color/red" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/uploadfilepath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsmedium"
                android:hint="docname.pdf"
                android:textColor="@color/black" />

            <androidx.cardview.widget.CardView
                android:id="@+id/imageviewcard"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:visibility="gone"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/uploadimage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/demoimageadvocate" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:padding="10dp"
            android:text="@string/noofpages"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/noofpages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/edittextback"
            android:gravity="center"
            android:hint="xx"
            android:padding="6dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsmedium"
            android:padding="10dp"
            android:text="@string/chooselawyercat"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/packagerecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/proceedbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/signbutton"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/docproceed"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" />


</RelativeLayout>